--- a/app/Resources/views/front/footer.html.twig
+++ b/app/Resources/views/front/footer.html.twig
@@ -16,7 +16,7 @@
           <div class="row">
             <div class="col-xs-6">
               <div class="links-widget footer-widget">
-                <h4 class="footer-heading">Usefull Links}</h4>
+                <h4 class="footer-heading">{% trans %}Usefull Links{% endtrans %}</h4>
                 <ul>
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">Contact Us</a></li>
