--- a/app/Resources/views/front/home/slider.html.twig
+++ b/app/Resources/views/front/home/slider.html.twig
@@ -2,50 +2,30 @@
   <section class="home-revo-slider-2">
     <article class="content">    
       <div id="rev_slider_1066_1_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="  notgeneric125" data-source="gallery" style="background-color:transparent;padding:0px;">
+        {% block vendorSearch %}
         <!-- slider bottom panel -->
         <div class="slider-bottom-panel-two hidden-xs">
           <div class="container">
+            {{ form_start(searchForm, {'action': path('vendor_search'), 'method': 'POST'}) }}
             <div class="slider-bottom-two">
               <div class="col-sm-4">
-                <div class="select-category-dropdown dropdown">
-                  <button class="btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <span class="drp-name" data-bind="label">Select Vendor Category</span>
-                    <span><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Cake</a></li>
-                    <li><a href="#">Florist</a></li>
-                    <li><a href="#">Dresses</a></li>
-                    <li><a href="#">Jewelery</a></li>
-                    <li><a href="#">Venue</a></li>
-                    <li><a href="#">Photography</a></li>
-                    <li><a href="#">Music</a></li>
-                  </ul>
-                </div>
+                {{ form_widget(searchForm.service) }}
               </div>
               <div class="col-sm-4">
-                <div class="select-category-dropdown dropdown">
-                  <button class="btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    <span class="drp-name" data-bind="label">Select City</span>
-                    <span><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <li><a href="#">London</a></li>
-                    <li><a href="#">New York</a></li>
-                    <li><a href="#">California</a></li>
-                    <li><a href="#">Mumbai</a></li>
-                  </ul>
-                </div>
+                {{ form_widget(searchForm.city) }}
               </div>
               <div class="col-sm-4">
                 <div class="slider-bottom-panel-btn">
-                  <button type="button" class="btn btn-pink">Find A Vendor</button>
+                  <button type="submit" class="btn btn-pink">{% trans %}Find A Vendor{% endtrans %}</button>
                 </div>
               </div>
             </div>
+            {{ form_widget(searchForm._token) }}
+            {{ form_end(searchForm) }}
           </div>
         </div>
         <!-- end slider bottom panel -->
+        {% endblock %}
         <div id="rev_slider_1066_1" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.3.0.2">
           <ul>  
             <!-- SLIDE 1 -->
