--- a/src/FrontBundle/Resources/views/Blog/article.html.twig
+++ b/src/FrontBundle/Resources/views/Blog/article.html.twig
@@ -55,7 +55,7 @@
                       <a href="{{ path('article', {id:related.id, alias:related.alias}) }}"><img src="{{ cms_base_url ~ related.images.image_intro }}" class="img-responsive" alt="related-img"></a>
                     </div>
                     <div class="related-dtl">
-                      <h6 class="related-dtl-heading"><a href="blog-detail.html#">{{ related.title }}</a></h6>
+                      <h6 class="related-dtl-heading"><a href="{{ path('article', {id:related.id, alias:related.alias })}}">{{ related.title }}</a></h6>
                     </div>
                   </div>
                 </div>
