--- a/src/UserBundle/Resources/views/Profile/fields.html.twig
+++ b/src/UserBundle/Resources/views/Profile/fields.html.twig
@@ -4,10 +4,11 @@
     {% else %}
     {% set attr = attr|merge({'class': 'form-control'}) %}
     {% endif %}
+    {% set attr = attr|merge({'placeholder': (form.vars.label ? form.vars.label : form.vars.name)|trans }) %}
     <div class="form-group row {% if errors|length %}has-error{% endif %}">
       <div class="col-sm-4"><label>{{ (form.vars.label ? form.vars.label : form.vars.name)|trans }} {% if required %}*{% endif %}</label></div> 
       <div class="col-sm-8">
-        {{ block('form_widget') }}
+        {{- form_widget(form, {'attr':attr}) -}}
         <span class="help-block">{{ block('form_errors') }}</span>
       </div> 
     </div>
@@ -66,6 +67,19 @@
     {% endif %}
     {% set type = type|default('url') %}
     {{ block('form_widget_simple') }}
+{% endblock %}
+
+{% block date_widget %}
+  <div class="date-picker">
+    {% if attr.class is defined %}
+    {% set attr = attr|merge({'class': 'form-control date-pick ' ~ attr.class}) %}
+    {% else %}
+    {% set attr = attr|merge({'class': 'form-control date-pick'}) %}
+    {% endif %}
+    {% set type = 'text' %}
+    {{ block('form_widget_simple') }}
+    <label><i class="fa fa-calendar" aria-hidden="true"></i></label>
+  </div>
 {% endblock %}
 
 {% block _vendor_form_urls_entry_row %}
