feat: configuring phpunit

--- a/templates/front/Blog/article.html.twig
+++ b/templates/front/Blog/article.html.twig
@@ -1,4 +1,4 @@
-{% extends 'FrontBundle::Blog/layout.html.twig' %}
+{% extends 'front/Blog/layout.html.twig' %}
 
 {% block banner %}
 {% include 'front/banner.html.twig' with {'title' : 'Blog'|trans ~ ' / ' ~ article.category_title ~ ' / ' ~ article.title} %}
