--- a/templates/front/Blog/index.html.twig
+++ b/templates/front/Blog/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'FrontBundle::Blog/layout.html.twig' %}
+{% extends 'front/Blog/layout.html.twig' %}
 
 {% block body %}
 <section class="ptb120">
