--- a/templates/front/user/picture.html.twig
+++ b/templates/front/user/picture.html.twig
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-md-5 col-sm-4">
 			<div class="upload-img">
-				<img src="{% if 'http' in user.profilePicture %}{{ user.profilePicture }}{% else %}{{ asset(profile_pic_dir ~ user.profilePicture) }}{% endif %}" class="img-responsive img-rounded" alt="upload img">
+				<img src="{% if 'http' in user.profilePicture %}{{ user.profilePicture }}{% else %}{{ asset(profile_pic_dir ~ user.profilePicture)|imagine_filter('320x360') }}{% endif %}" class="img-responsive img-rounded" alt="upload img">
 			</div>
 		</div>
 		<div class="col-md-7 col-sm-8">
