Revert "feat: Deal with deprecation errors"
This reverts commit 4cf9b1bb526fc99f03b8cb1c155a6e43a55d43fd.

--- a/templates/front/layout.html.twig
+++ b/templates/front/layout.html.twig
@@ -25,7 +25,6 @@
 <link href="{{ asset('bundles/front/css/stucture.css') }}" rel="stylesheet" type="text/css"> <!-- stucture css -->
 <link href="{{ asset('bundles/front/css/share-tooltip.css') }}" rel="stylesheet" type="text/css"> <!-- google fonts -->
 <link href="{{ asset('bundles/front/css/style.css') }}" rel="stylesheet" type="text/css"> <!-- custom css -->
-<link href="{{ asset('bundles/front/css/vendor-categories.css') }}" rel="stylesheet" type="text/css"> <!-- custom css -->
 {% if app.request.locale == 'ar' %}
 <link href="{{ asset('bundles/front/css/style.ar.css') }}" rel="stylesheet" type="text/css">
 {% endif %}
@@ -60,7 +59,7 @@
 
 {% block header %}
 {% include 'front/topbar.html.twig' %}
-{{ render(controller('FrontBundle\\Controller\\MainmenuController::indexAction')) }}
+{{ render(controller('FrontBundle:Mainmenu:index')) }}
 {% endblock %}
 
 {% block banner %}{% endblock %}
