--- a/templates/front/home/layout.html.twig
+++ b/templates/front/home/layout.html.twig
@@ -15,14 +15,13 @@
 <link href="{{ asset('bundles/front/css/datepicker.css') }}" rel="stylesheet" type="text/css"> <!-- datepicker css -->
 <link href="{{ asset('bundles/front/css/flaticon.css') }}" rel="stylesheet" type="text/css"> <!-- flaticon css -->
 <link href="{{ asset('bundles/front/css/home.css') }}" rel="stylesheet" type="text/css"> <!-- custom css -->
-<link href="{{ asset('bundles/front/css/vendor-categories.css') }}" rel="stylesheet" type="text/css"> <!-- custom css -->
 <link href="{{ asset('bundles/front/css/stucture.css') }}" rel="stylesheet" type="text/css"> <!-- stucture css -->
 <!-- end theme style -->
 {% endblock %}
 
 {% block header %}
 {% include 'front/topbar.html.twig' %}
-{{ render(controller('FrontBundle\\Controller\\MainmenuController::indexAction')) }}
+{{ render(controller('FrontBundle:Mainmenu:index')) }}
 {% endblock %}
 
 {% block body %}
