feat: Adding new vendor received enquiries page

--- a/templates/front/mail/base.html.twig
+++ b/templates/front/mail/base.html.twig
@@ -233,7 +233,7 @@
 
                                                 <div style="line-height: 26px">
 
-                                                    {% trans %}See All services proposed by Fouras{% endtrans %}
+                                                    {% trans %}Are you trying our planning tools ?{% endtrans %}
 
                                                 </div>
                                             </td>
@@ -263,7 +263,7 @@
                                     <!-- main section button -->
 
                                     <div style="line-height: 22px;">
-                                        <a href="{{ url('vendors') }}" style="color: #fff; text-decoration: none;text-transform: uppercase">{% trans %}View all services{% endtrans %}</a>
+                                        <a href="{{ url('couple_budget') }}" style="color: #fff; text-decoration: none;text-transform: uppercase">{% trans %}Start planning today{% endtrans %}</a>
                                     </div>
                                 </td>
                             </tr>
