--- a/templates/front/mail/enquiry.received.html.twig
+++ b/templates/front/mail/enquiry.received.html.twig
@@ -87,7 +87,7 @@
                                                 <!-- main section button -->
 
                                                 <div style="line-height: 22px;">
-                                                    <a href="#TODO" style="color: #ffffff; text-decoration: none;text-transform: uppercase">{% trans %}My received enquiries{% endtrans %}</a>
+                                                    <a href="{{ url('vendor_enquiry') }}" style="color: #ffffff; text-decoration: none;text-transform: uppercase">{% trans %}My received enquiries{% endtrans %}</a>
                                                 </div>
                                             </td>
                                         </tr>
